z-index fix

--- a/src/styles/blocks/header/header.sass
+++ b/src/styles/blocks/header/header.sass
@@ -1,6 +1,6 @@
 .header-all
     position: fixed
-    z-index: 6
+    z-index: 12
     width: 100%
     top: 0
     left: 0
